--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             <div class="row">
                 <header class="centered">
                     <h1>Richard Olsen</h1>
-                    <p>PROFESSIONAL WEB DESIGNER & DEVELOPER</p>
+                    <p>WEB DESIGNER & DEVELOPER</p>
                 </header>
                 <div class="social-icons">
-                        <a href="https://twitter.com/"><i class="fa fa-twitter"></i></a>
+                        <a href="https://x.com/GoAlienWeb/"><i class="fa fa-x"></i></a>
                         <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
 						 <a href="https://www.google.com/"><i class="fa fa-google-plus"></i></a>
                         <a href="https://www.dribbble.com/"><i class="fa fa-dribbble"></i></a>
