--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p>WEB DESIGNER & DEVELOPER</p>
                 </header>
                 <div class="social-icons">
-                        <a href="https://x.com/GoAlienWeb/"><i class="fa fa-x"></i></a>
+                        <a href="https://x.com/GoAlienWeb/"><i class="fa fa-twitter"></i></a>
                         <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
 						 <a href="https://www.google.com/"><i class="fa fa-google-plus"></i></a>
                         <a href="https://www.dribbble.com/"><i class="fa fa-dribbble"></i></a>
