--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
                 </header>
                 <div class="social-icons">
                         <a href="https://x.com/GoAlienWeb/"><i class="fa fa-twitter"></i></a>
-                        <a href="https://www.facebook.com/"><i class="fa fa-facebook"></i></a>
-						 <a href="https://www.google.com/"><i class="fa fa-google-plus"></i></a>
-                        <a href="https://www.dribbble.com/"><i class="fa fa-dribbble"></i></a>
-                        <a href="https://www.linkedin.com/"><i class="fa fa-linkedin-square"></i></a>
-                         <a href="https://www.pinterest.com/"><i class="fa fa-pinterest"></i></a>
+                        <a href="https://dribbble.com/GoAlienWeb/"><i class="fa fa-dribbble"></i></a>
+                        <a href="https://www.linkedin.com/in/richard-olsen-ii//"><i class="fa fa-linkedin-square"></i></a>
+                         <a href="https://www.instagram.com/goalienweb"><i class="fa fa-instagram"></i></a>
                        
                     
                 </div>
