--- a/index.html
+++ b/index.html
@@ -356,7 +356,8 @@
     <div class="row mrgn30">  
  						<div class="col-sm-12 col-md-8">
 										<!--NOTE: Update your email Id in "contact_me.php" file in order to receive emails from your contact form-->
-		<form name="sentMessage" id="contactForm"  novalidate> 
+		<form id="contactForm" name="sentMessage" action="https://formspree.io/f/mayavdzk"
+  method="POST"> 
 		<div class="control-group">
 		<div class="controls">
 		<input type="text" class="form-control" 
