--- a/index.html
+++ b/index.html
@@ -365,14 +365,9 @@
       <div class="col-sm-4">
         <h4>Address:</h4>
         <address>
-        Steve Smith<br>
-        134 Stilla. Tae., 414515<br>
-        Leorislon, SA 02434-34534 USA <br>
+        San Antonio, TX 78213 USA <br>
         </address>
-        <h4>Phone:</h4>
-        <address>
-        12345-49589-2<br>
-        </address>
+        
       </div>
     </div>
   </div>
