--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
     <div class="row">
       <div class="heading"> 
         <!-- Heading -->
-        <h2>Let's Keep In Touch!</h2>
-        <p>Thank you for visiting out my profile. If you would like to get into contact with me, please fill out the form below.</p>
+        <h2>Get Your Project Started Today!</h2>
+        <p>If you would like to get into contact with me, please fill out the form below.</p>
       </div>
     </div>
     <div class="row mrgn30">  
