--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <div class="container">
     <div>
       <h1>Your Shopify specialist</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. Pellentesque elementum ultricies quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque feugiat dictum erat. Nulla vehicula condimentum purus, quis imperdiet nisl ultricies eleifend. Nulla quis rhoncus risus. Ut vel vehicula urna.</p>
+      <p>Whether you are a YouTuber with 5 items or an established company with 500+ items, I can build the right solution for you.</p>
     </div>
   </div>
 </section>
