--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="container banner-content"> 
             <div class="row">
                 <header class="centered">
-                    <h1>Richard Olsen</h1>
-                    <p>WEB DESIGNER & DEVELOPER</p>
+                    <h1>Alien Web Development</h1>
+                    <p>WEB DESIGN & DEVELOPMENT</p>
                 </header>
                 <div class="social-icons">
                         <a href="https://x.com/GoAlienWeb/"><i class="fa fa-twitter"></i></a>
