--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
   <div class="container">
     <div>
       <h1>Your Shopify specialist</h1>
-      <p>Whether you are a YouTuber with 5 items or an established company with 500+ items, I can build the right solution for you.</p>
+      <p>eCommerce sites can and will get complicated. You have better things to do than when you're running your business. 
+	      Whether you are a YouTuber with 5 items or an established company with 500+ items, I can build the right solution for you.</p>
     </div>
   </div>
 </section>
