--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
           <h2>Hello, I am Richard Olsen...</h2>
           <h3> Web UI/UX Designer / Front End Developer <br /> Based in San Antonio,TX USA</h3>
         </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitendisse interdum erat et neque tincidunt volutpat. Cras eget. Suspendisse interdum erat et neque tincidunt volutpat. <br/>
+        <p><ul><li>Lorem ipsum dolor sit amet, consectetur adipiscing elitendisse interdum erat et neque tincidunt volutpat. Cras eget. 
+		Suspendisse interdum erat et neque tincidunt volutpat. </ul></li><br/>
           <br/>
-          Cras eget augue id dui varius pretium.
-          Consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius.</p>
+          <li>Cras eget augue id dui varius pretium.
+          Consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius.</li></ul></p>
       </div>
       <!-- end: --> 
     </div>
