--- a/index.html
+++ b/index.html
@@ -95,11 +95,10 @@
           <h2>Hello, I am Richard Olsen...</h2>
           <h3> Web UI/UX Designer / Front End Developer <br /> Based in San Antonio,TX USA</h3>
         </div>
-        <p><ul><li>Lorem ipsum dolor sit amet, consectetur adipiscing elitendisse interdum erat et neque tincidunt volutpat. Cras eget. 
-		Suspendisse interdum erat et neque tincidunt volutpat. </ul></li><br/>
+        <p><ul><li>Bachelor of Science in Interdisciplinary Studies - 2020. Liberty University 
+		</li><br/>
           <br/>
-          <li>Cras eget augue id dui varius pretium.
-          Consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius.</li></ul></p>
+          <li>Freelance web developer 2020 - 2021 when I started Alien Web Development</li></ul></p>
       </div>
       <!-- end: --> 
     </div>
