--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
           <h3> Web UI/UX Designer / Front End Developer <br /> Based in San Antonio,TX USA</h3>
         </div>
         <p><ul><li>Bachelor of Science in Interdisciplinary Studies - 2020. Liberty University 
-		</li><br/>
+		</li>
           <br/>
-          <li>Freelance web developer 2020 - 2021 when I started Alien Web Development</li></ul></p>
+          <li>I've been a web developer since 2020. The following year, I started Alien Web Development</li></ul></p>
       </div>
       <!-- end: --> 
     </div>
