--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <p><ul><li>Bachelor of Science in Interdisciplinary Studies - 2020. Liberty University 
 		</li>
           <br/>
-          <li>I've been a web developer since 2020. The following year, I started Alien Web Development</li></ul></p>
+          <li>Web developer since 2020. The following year, I started Alien Web Development</li></ul></p>
       </div>
       <!-- end: --> 
     </div>
