--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <h2>Hello, I am Richard Olsen...</h2>
           <h3> Web UI/UX Designer / Front End Developer <br /> Based in San Antonio,TX USA</h3>
         </div>
-        <p><ul><li>Bachelor of Science in Interdisciplinary Studies <li>2020 - Liberty University</li> 
+        <p><ul><li>Bachelor of Science in Interdisciplinary Studies <br />2020 - Liberty University 
 		</li>
           <li>Web developer since 2020. The following year, I started Alien Web Development</li>
 	<li>I've always been drawn to creative pursuits and enjoy traveling and photography when not busy building web projects</li>
