--- a/index.html
+++ b/index.html
@@ -129,22 +129,22 @@
       <div class="col-md-4 skillBox">
         <div id="diagram-id-1" class="diagram" data-percent="95.2%"></div>
         <div class="chart-text">
-          <h4>Visual Designing</h4>
+          <h4>UI/UX Design</h4>
           <p>Exp 4 years</p>
         </div>
       </div>
       <div class="col-md-4 skillBox">
         <div id="diagram-id-2" class="diagram" data-percent="75.2%"></div>
         <div class="chart-text">
-          <h4>Frontend Developer</h4>
-          <p>Exp 8 years</p>
+          <h4>Front End Development</h4>
+          <p>Exp 4 years</p>
         </div>
       </div>
       <div class="col-md-4 skillBox">
         <div id="diagram-id-3" class="diagram" data-percent="85.6%"></div>
         <div class="chart-text">
-          <h4>Backend Developer</h4>
-          <p>Exp 5 years</p>
+          <h4>Shopify Developer</h4>
+          <p>Exp 1 year</p>
         </div>
       </div>
     </div>
