--- a/index.html
+++ b/index.html
@@ -123,18 +123,19 @@
     <div class="heading "> 
       <!-- Heading -->
       <h2>My Skills</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. Pellentesque elementum ultricies quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque feugiat dictum erat. </p>
+      <p>Blow is a fun representation of the percentage of each type of work that I've done. Most of the projects that I have worked on were design and 
+	      build. Lately, I've been taking on Shopify projects almost exclusively.</p>
     </div>
     <div class="row skillContainer">
       <div class="col-md-4 skillBox">
-        <div id="diagram-id-1" class="diagram" data-percent="95.2%"></div>
+        <div id="diagram-id-1" class="diagram" data-percent="75.2%"></div>
         <div class="chart-text">
           <h4>UI/UX Design</h4>
           <p>Exp 4 years</p>
         </div>
       </div>
       <div class="col-md-4 skillBox">
-        <div id="diagram-id-2" class="diagram" data-percent="75.2%"></div>
+        <div id="diagram-id-2" class="diagram" data-percent="95.2%"></div>
         <div class="chart-text">
           <h4>Front End Development</h4>
           <p>Exp 4 years</p>
