--- a/index.html
+++ b/index.html
@@ -123,8 +123,9 @@
     <div class="heading "> 
       <!-- Heading -->
       <h2>My Skills</h2>
-      <p>Blow is a fun representation of the percentage of each type of work that I've done. Most of the projects that I have worked on were design and 
-	      build. Lately, I've been taking on Shopify projects almost exclusively.</p>
+      <p>Blow is a fun representation of the percentage of each type of work that I've done along with my years of experience. 
+	      Most of the projects that I have worked on were design and build. Lately, I've been taking on Shopify projects 
+	      almost exclusively.</p>
     </div>
     <div class="row skillContainer">
       <div class="col-md-4 skillBox">
