--- a/index.html
+++ b/index.html
@@ -211,9 +211,9 @@
         <div class="row">
           <div class="portfolio-items isotopeWrapper clearfix" id="3">
             <article class="col-sm-4 isotopeItem webdesign">
-              <div class="portfolio-item"> <img src="images/portfolio/Shopify-3.png" alt="" />
+              <div class="portfolio-item"> <img src="images/Shopify-3.png" alt="" />
                 <div class="portfolio-desc align-center">
-                  <div class="folio-info"> <a href="images/portfolio/Shopify-3.png" class="fancybox">
+                  <div class="folio-info"> <a href="images/Shopify-3.png" class="fancybox">
                     <h5>Project Name</h5>
                     <i class="fa fa-plus-square-o fa-2x"></i></a> </div>
                 </div>
