--- a/index.html
+++ b/index.html
@@ -220,10 +220,10 @@
               </div>
             </article>
             <article class="col-sm-4 isotopeItem photography">
-              <div class="portfolio-item"> <img src="images/portfolio/img2.jpg" alt="" />
+              <div class="portfolio-item"> <img src="images/aaron_mockup.jpg" alt="" />
                 <div class="portfolio-desc align-center">
-                  <div class="folio-info"> <a href="images/portfolio/img2.jpg" class="fancybox">
-                    <h5>Project Name</h5>
+                  <div class="folio-info"> <a href="images/aaron_mockup.jpg" class="fancybox">
+                    <h5>Parks Interiors</h5>
                     <i class="fa fa-plus-square-o fa-2x"></i></a> </div>
                 </div>
               </div>
