--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
               <div class="portfolio-item"> <img src="images/ShopifyMockup2.png" alt="" />
                 <div class="portfolio-desc align-center">
                   <div class="folio-info"> <a href="images/ShopifyMockup2.png" class="fancybox">
-                    <h5>Project Name</h5>
+                    <h5>Web Development Courses</h5>
                     <i class="fa fa-plus-square-o fa-2x"></i></a> </div>
                 </div>
               </div>
