--- a/index.html
+++ b/index.html
@@ -201,8 +201,7 @@
     <div class="heading"> 
       <!-- Heading -->
       <h2>Portfolio</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse interdum erat et neque tincidunt volutpat. Cras eget augue id dui varius pretium. Cras posuere dolor risus. 
-	      Pellentesque elementum ultricies quam, sit amet rhoncus nisl viverra in. Cras imperdiet nisi a euismod molestie. Ut a metus arcu. Pellentesque feugiat dictum erat.</p>
+      <p>Below, you will find some of my most recent works. I'd love to have your project displayed next. Get in touch below and see how I can help you today.</p>
     </div>
 	  
    
