--- a/index.html
+++ b/index.html
@@ -219,9 +219,9 @@
               </div>
             </article>
             <article class="col-sm-4 isotopeItem photography">
-              <div class="portfolio-item"> <img src="images/aaron_mockup.jpg" alt="" />
+              <div class="portfolio-item"> <img src="images/parksinteriors_mockup.png" alt="" />
                 <div class="portfolio-desc align-center">
-                  <div class="folio-info"> <a href="images/aaron_mockup.jpg" class="fancybox">
+                  <div class="folio-info"> <a href="images/parksinteriors_mockup.png" class="fancybox">
                     <h5>Parks Interiors</h5>
                     <i class="fa fa-plus-square-o fa-2x"></i></a> </div>
                 </div>
