--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!--[if lt IE 9]> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <![endif]-->
-<title>Richard Olsen | San Antonio | Web Developer</title>
+<title>Alien Web Development | San Antonio | Shopify Developer</title>
 <meta name="description" content="">
 <meta name="author" content="WebThemez">
 <!--[if lt IE 9]>
